# sdl2-basic-2D

./: README.md  opengl-basic-2D.sln
opengl-basic-2D/: CMakeLists.txt  GL.cpp  GL.h  input.cpp  input.h  main.cpp  opengl-basic-2D.vcxproj  opengl-basic-2D.vcxproj.filters  renderer.cpp  renderer.h  shader.cpp  shader.h
opengl-basic-2D/libs/SDL2/lib/: SDL2d.lib  SDL2maind.lib
